pgl (2.2.0~pre1-1) unstable; urgency=low

  * new upstream version
  * drop debian/use-systemwide-LSB-init-functions.patch
  * control: dbus only recommended by pgld, not required

 -- jre <jre-phoenix@users.sourceforge.net>  Fri, 04 May 2012 18:31:42 +0200


pgl (2.1.3-1) unstable; urgency=low

  * new upstream release
  * added "dbus" to the pgld dependency
  * changed use-systemwide-LSB-init-functions.patch to modify Makefile

 -- jre <jre-phoenix@users.sourceforge.net>  Sat, 17 Sep 2011 15:44:54 +0200

pgl (2.1.2-1) unstable; urgency=low

  * new upstream release

 -- jre <jre-phoenix@users.sourceforge.net>  Tue, 23 Aug 2011 21:56:02 +0200

pgl (2.1.1-1) unstable; urgency=low

  * new upstream release
  * fixed 2.1.0-1 debian/changelog entry

 -- jre <jre-phoenix@users.sourceforge.net>  Sat, 13 Aug 2011 02:48:58 +0200

pgl (2.1.0-1) unstable; urgency=low

  * added pgl-gui and pgl-gui-dbg package
  * fixed pglcmd.dirs (pgl instead of blockcontrol)
  * bumped to Standards-Version 3.9.2.0, no changes needed
  * removed most debconf questions except INIT and CRON
  * fixed patches/use-systemwide-LSB-init-functions.patch

 -- jre <jre-phoenix@users.sourceforge.net>  Fri, 12 Aug 2011 19:09:22 +0200

pgl (2.0.4-1) unstable; urgency=low

  * new upstream release
  * moved LIST_NAME2LIST_URL from pglcmd.lib to debian/postinst

 -- jre <jre-phoenix@users.sourceforge.net>  Sun, 23 Jan 2011 15:50:44 +0100

pgl (2.0.3-1) unstable; urgency=low

  * new upstream release.

 -- jre <jre-phoenix@users.sourceforge.net>  Fri, 10 Sep 2010 17:46:54 +0200

pgl (2.0.2-1) unstable; urgency=low

  * debian/postinst: remove invalid characters (" or |) from $RET
  * added debian/patches/use-systemwide-LSB-init-functions.patch
  * debian/control:
    - replaced Conflicts with Breaks
    - added breaks and replaces moblock (<<2~) for pgld
    - bumped to Standards-Version 3.9.1.0
    - disabled dbus in Build-Depends
