@@ -1,3 +1,3 @@
-usr/bin/pgl-gui
+usr/bin/pgl_gui
 usr/share/applications/pgl-gui.desktop
 usr/share/pixmaps/pgl-gui.png
