@@ -1,8 +1,12 @@
-usr/share/man/man1/pgld.1.gz usr/share/man/man1/pgl-gui.1.gz
 usr/share/doc/pgld/AUTHORS usr/share/doc/pgl-gui/AUTHORS
 usr/share/doc/pgld/BUGS usr/share/doc/pgl-gui/BUGS
-usr/share/doc/pgld/README.gz usr/share/doc/pgl-gui/README.gz
-usr/share/doc/pgld/README.Debian usr/share/doc/pgl-gui/README.Debian
+usr/share/doc/pgld/INSTALL.gz usr/share/doc/pgl-gui/INSTALL.gz
+usr/share/doc/pgld/NEWS.gz usr/share/doc/pgl-gui/NEWS.gz
 usr/share/doc/pgld/README.blocklists.gz usr/share/doc/pgl-gui/README.blocklists.gz
+usr/share/doc/pgld/README.dbus.gz usr/share/doc/pgl-gui/README.dbus.gz
+usr/share/doc/pgld/README.Debian usr/share/doc/pgl-gui/README.Debian
+usr/share/doc/pgld/README.gz usr/share/doc/pgl-gui/README.gz
 usr/share/doc/pgld/THANKS usr/share/doc/pgl-gui/THANKS
 usr/share/doc/pgld/TODO usr/share/doc/pgl-gui/TODO
+usr/share/man/man1/pgld.1.gz usr/share/man/man1/pgl-gui.1.gz
+usr/share/man/man1/pgld.1.gz usr/share/man/man1/pgl-gui.wd.1.gz
