@@ -1,9 +1,12 @@
-usr/share/man/man1/pgld.1.gz usr/share/man/man1/pglcmd.1.gz
-usr/share/man/man1/pgld.1.gz usr/share/man/man1/pglcmd.wd.1.gz
 usr/share/doc/pgld/AUTHORS usr/share/doc/pglcmd/AUTHORS
 usr/share/doc/pgld/BUGS usr/share/doc/pglcmd/BUGS
-usr/share/doc/pgld/README.gz usr/share/doc/pglcmd/README.gz
-usr/share/doc/pgld/README.Debian usr/share/doc/pglcmd/README.Debian
+usr/share/doc/pgld/INSTALL.gz usr/share/doc/pglcmd/INSTALL.gz
+usr/share/doc/pgld/NEWS.gz usr/share/doc/pglcmd/NEWS.gz
 usr/share/doc/pgld/README.blocklists.gz usr/share/doc/pglcmd/README.blocklists.gz
+usr/share/doc/pgld/README.dbus.gz usr/share/doc/pglcmd/README.dbus.gz
+usr/share/doc/pgld/README.Debian usr/share/doc/pglcmd/README.Debian
+usr/share/doc/pgld/README.gz usr/share/doc/pglcmd/README.gz
 usr/share/doc/pgld/THANKS usr/share/doc/pglcmd/THANKS
 usr/share/doc/pgld/TODO usr/share/doc/pglcmd/TODO
+usr/share/man/man1/pgld.1.gz usr/share/man/man1/pglcmd.1.gz
+usr/share/man/man1/pgld.1.gz usr/share/man/man1/pglcmd.wd.1.gz
