@@ -2,7 +2,11 @@ pgl (2.2.0~pre1-1) unstable; urgency=low
 
   * new upstream version
   * drop debian/use-systemwide-LSB-init-functions.patch
-  * control: dbus only recommended by pgld, not required
+  * control:
+    - dbus just recommended by pgld, not required
+    - adapted to autotools buildsystem
+    - retool automatically with dh-autoreconf
+    - bumped to Standards-Version: 3.9.3.0, no changes needed
 
  -- jre <jre-phoenix@users.sourceforge.net>  Fri, 04 May 2012 18:31:42 +0200
 
